<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/margin_medium2"
    tools:context="activities.SnackActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/btnBack"
                android:layout_width="@dimen/margin_xxlarge"
                android:layout_height="@dimen/margin_xxlarge"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_medium"
                android:elevation="@dimen/margin_medium">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/margin_xlarge"
                    android:layout_height="@dimen/margin_xlarge"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_chevron_left_24" />
            </FrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCombo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium2"
                android:layout_marginTop="?attr/actionBarSize" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPromoCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rvCombo"
                android:layout_marginStart="@dimen/margin_medium2"
                android:layout_marginEnd="@dimen/margin_medium2"
                android:hint="@string/lbl_enter_promo_code" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPromoCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etPromoCode"
                android:layout_marginStart="@dimen/margin_medium2"
                android:text="@string/lbl_promo_code" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvGet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/etPromoCode"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_toRightOf="@id/tvPromoCode"
                android:text="@string/lbl_get_it_now"
                android:textSize="@dimen/text_regular_2x"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvPromoCode"
                android:layout_marginStart="@dimen/margin_medium2"
                android:layout_marginTop="@dimen/margin_medium2"
                android:text="@string/lbl_sub_total"
                android:textColor="@color/teal_200"
                android:textSize="@dimen/text_regular_2x"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvSubtotal"
                android:layout_below="@id/tvPromoCode"
                android:layout_marginTop="@dimen/margin_medium2"
                android:layout_toRightOf="@+id/tvTotal"
                android:textColor="@color/teal_200"
                android:textSize="@dimen/text_regular_2x"
                android:textStyle="bold" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPaymentMethod"
                android:text="@string/lbl_payment_method"
                android:layout_below="@+id/tvTotal"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginStart="@dimen/margin_medium2"
                android:textSize="@dimen/text_regular_3x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvPaymentMethod"
                android:layout_marginStart="@dimen/margin_medium2"
                android:layout_marginTop="@dimen/margin_medium" />
        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium2"
        android:background="@drawable/background_confirm_button"
        android:backgroundTint="@color/colorPrimary"
        android:text="Pay $0"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_regular_3x" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>