<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activities.MovieDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_movie_detail_image"
            app:collapsedTitleTextColor="@color/black"
            app:expandedTitleTextColor="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="Wonder Park">

            <FrameLayout
                android:id="@+id/btnBack"
                android:layout_width="@dimen/margin_xxlarge"
                android:layout_height="@dimen/margin_xxlarge"
                android:layout_marginStart="@dimen/margin_medium2"
                android:layout_marginTop="@dimen/margin_xlarge"
                android:elevation="@dimen/margin_medium">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/margin_xlarge"
                    android:layout_height="@dimen/margin_xlarge"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_chevron_left_white_24dp" />
            </FrameLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivPoster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                tools:src="@drawable/mp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax">


                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnPlay"
                        style="@style/Widget.Material3.Button.Icon"
                        android:layout_width="@dimen/margin_xxlarge"
                        android:layout_height="@dimen/margin_xxlarge"
                        android:layout_marginBottom="@dimen/margin_xlarge"
                        android:backgroundTint="@color/opacity30"
                        android:insetLeft="0dp"
                        android:insetTop="0dp"
                        android:insetRight="0dp"
                        android:insetBottom="0dp"
                        app:icon="@drawable/ic_baseline_play_arrow_black_24dp"
                        app:iconPadding="0dp"
                        app:iconSize="@dimen/margin_medium3"
                        app:strokeColor="@color/white"
                        app:strokeWidth="@dimen/margin_small" />
                </FrameLayout>
            </RelativeLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <!--<FrameLayout
        android:layout_marginTop="280dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:background="@drawable/background_rounded_view"
            android:layout_width="match_parent"
            android:layout_height="30dp"/>
    </FrameLayout>-->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium_n"
        android:background="@drawable/background_rounded_view"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMovieName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium2"
                android:layout_marginBottom="@dimen/margin_medium"
                android:background="@color/white"
                android:paddingStart="@dimen/margin_medium2"
                android:text="Wonder Park"
                android:textColor="@color/black"
                android:textSize="@dimen/text_heading_1x"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvMovieName"
                android:layout_marginStart="@dimen/margin_medium2"
                android:text="1hr 45min"
                android:textSize="@dimen/text_regular_2x" />

            <RatingBar
                android:id="@+id/rbMovieRating"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvMovieName"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_toEndOf="@+id/tvTime"
                android:backgroundTint="@color/ratingBar_color"
                android:numStars="5"
                android:rating="3.5" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvMovieName"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_toEndOf="@id/rbMovieRating"
                android:text="IMDB 6.6"
                android:textSize="@dimen/text_regular_2x" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMovieGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvRating"
                android:layout_marginTop="@dimen/margin_medium2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPlotSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rvMovieGenre"
                android:layout_marginStart="@dimen/margin_medium2"
                android:layout_marginTop="@dimen/margin_medium2"
                android:text="@string/lbl_plot_summary"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/text_regular_3x"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvPlotSummary"
                android:layout_marginStart="@dimen/margin_medium2"
                android:layout_marginTop="@dimen/margin_medium2"
                android:text="@string/description_story_line" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCastTiltle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvSummary"
                android:layout_marginStart="@dimen/margin_medium2"
                android:layout_marginTop="@dimen/margin_medium2"
                android:text="@string/lbl_cast"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/text_regular_3x"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvSummary"
                android:layout_marginStart="@dimen/margin_medium2"
                android:layout_marginTop="@dimen/margin_medium2"
                android:clipToPadding="false"
                android:paddingEnd="@dimen/margin_medium" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGetTicket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium2"
        android:background="@drawable/background_confirm_button"
        android:backgroundTint="@color/colorPrimary"
        android:text="Get Your Ticket"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_regular_3x" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>